chore: add pydantic to dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ seaborn = "^0.13.2"
 soundfile = "^0.12.1"
 python-dotenv = "^1.0.1"
 tensordict = "0.3.2"
+pydantic = "^2.10.6"
 
 
 [tool.poetry.group.dev.dependencies]
