--- a/configs/models/symmetric/default.yaml
+++ b/configs/models/symmetric/default.yaml
@@ -87,20 +87,9 @@ multimodal_temporal_encoder:
             // ${models.i_jepa_target_encoder.inference_forward.kernel_size}
           )
           "}
-      action:
-        _target_: ami.models.components.multi_embeddings.MultiEmbeddings
-        choices_per_category:
-          _target_: hydra.utils.get_object
-          path: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY
-        embedding_dim: 8
-        do_flatten: True
     flattened_obses_projection:
       _target_: torch.nn.Linear
-      in_features: >-
-        ${python.eval:"
-        ${..observation_flattens.image.dim_out}
-        + ${..observation_flattens.action.embedding_dim} * 5
-        "}
+      in_features: ${..observation_flattens.image.dim_out}
       out_features: 1024
     core_model:
       _target_: ami.models.components.sioconvps.SioConvPS
@@ -120,12 +109,6 @@ multimodal_temporal_encoder:
             dim_in: ${..0.dim_out}
             dim_out: ${models.i_jepa_target_encoder.model.out_dim}
             normal_cls: Deterministic
-      action:
-        _target_: ami.models.components.discrete_policy_head.DiscretePolicyHead
-        dim_in: ${...core_model.dim}
-        action_choices_per_category:
-          _target_: hydra.utils.get_object
-          path: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY
 
 forward_dynamics:
   _target_: ami.models.model_wrapper.ModelWrapper
